<resources>
    <string name="app_name">150ESaude</string>
    <string name="title_activity_principal"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Começe hoje Praticar seus Exercícios</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pesquizar</string>

    //---tela inicial---//
    <string name="txTePtex">Faça exercícios e ganhe descontos!</string>
    <string name="txTeApTi">150ESaude</string>
    <string name="txTiLog">Efetuar Login</string>

    //tela de Apresentação
    <string name="txTexPag">Venha e faça parte do 150ESaude, pratique 150 minutos de atividades físicas por semana!!!
        Este número é o ideal para um indivíduo de (18-64) anos de acordo com a Organização Mundial de Saúde!
        Na 150ESaude,você consegue descontos nas diversas áreas que envolvem a saúde ex: Consultas, para isso basta se
        exercitar!
    </string>
    <string name="btnCadastar">Fazer Cadastro</string>
    <string name="btnLogin">Já tenho Cadastro</string>

    //tela Logi
    <string name="edNome">Digite seu Nome</string>
    <string name="edEmail">Digite seu Email</string>
    <string name="edSenha">Digite sua senha</string>
    <string name="edConfSenha">Confirme sua Senha</string>
    <string name="edPeso">Digite seu peso</string>
    <string name="edAltura">Digite sua altura</string>
    <string name="edEndereco">Digite seu endereço</string>
    <string name="edCidade">Ddigite sua cidade</string>
    <string name="edIdade">Digite sua idade</string>
    <string name="edTelefone">Digite seu telefone</string>
    <string name="txDesCadas">Favor Preencher todos os campos</string>

    <string-array name="Spinner_sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <string-array name="Spinner_bairro">
        <item>Click aqui em qual e seu Bairro</item>
        <item>Moinhos de vento</item>
        <item>Menino Deus</item>
        <item>Centro</item>
        <item>Santana</item>
        <item>Tristeza</item>
    </string-array>

    <string-array name="Spinner_estado">
        <item>Estados disponíveis</item>
        <item>Rio Grande do Sul</item>
        <item>Santa Catarina</item>
        <item>Parana</item>
        <item>São Paulo</item>
        <item>Rio de Janeiros</item>
        <item>Minas Gerais</item>
    </string-array>

    <string-array name="Spinner_cidades">
        <item>Escolha a cidade</item>
        <item>Porto Alegre</item>
        <item>Canoas</item>
        <item>São Leopoldo</item>
        <item>Canela</item>
        <item>Gramado</item>
        <item>Rio de Janeiro</item>
        <item>São Paulo</item>
        <item>Belo Horizonte</item>
    </string-array>

    <string name="txTiTePri">150ESaude</string>
    <string name="txTiTePri2">Começe hoje sua Prática de Execícios</string>

    <string name="btnInicioAtivi">Iníciar Atividade</string>
    <string name="btnFinalAtivi">Finalizar Atividade</string>
    <string name="txtTexCalen">Programe suas Atividades Físicas</string>
    <string name="btnCalendario">Calendário de Atividade</string>

    <string-array name="Spinner_items">
        <item>Click aqui é escolha suas atividades</item>
        <item>Atletismo</item>
        <item>Basquete</item>
        <item>Caminhada</item>
        <item>Ciclismo</item>
        <item>Dança</item>
        <item>Futebol</item>
        <item>Musculação</item>
        <item>Natação</item>
        <item>Outras</item>
    </string-array>

    <string name="txtCalendario">Marque o dias da semana de suas atividades</string>

    //tela MENU
    <string name="menu_qrcode">Scannear QRCode</string>
    <string name="menu_foto">Minhas Fotos</string>
    <string name="menu_esporte">Lojas de Esportes</string>
    <string name="menu_videos">Meus VÍdeos</string>
    <string name="menu_metas">Minhas Metas</string>
    <string name="menu_nutricao">Lojas de Nutrição</string>
    <string name="menu_sportes">Lojas de Esportes</string>
    <string name="menu_danca">Escolas de danças</string>
    <string name="menu_academias">Acadêmias</string>

    <string name="menu_nutricionista">Nutricionistas</string>
    <string name="menu_personalTreino">Personal Trainner</string>
    <string name="menu_psicolo">Psicologos</string>
    <string name="menu_medicos">Medícos</string>
    <string name="menu_fisiote">Fisioterapeutas</string>

    <string name="title_activity_perfio">Noticias e Novidades 150ESaude</string>
    <string name="large_text">
        "Leia mais sobre a área da saúde através de notícias e informativos
        na 150ESaude!"
    </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="intro_text">Deslize a borda para sair do mapa.</string>

    //PrincipalMenu
    <string name="cal_atividade">Atividade</string>
    <string name="cal_acumulado">Acumulado</string>
    <string name="meus_pontos">Pontos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pont_frag">Pontos</string>
    <string name="ativ_frag">Atividade</string>
    <string name="acum_frag">Acumulado</string>

    <string name="btnCalendario1">Calendário de atividades</string>

    // tela atividade
    <string-array name="Spinner_empresas">
        <item>Click aqui é escolha um sistema de monitoramento</item>
        <item>Sansung Heath</item>
        <item>Treino em casa para Mulheres</item>
        <item>Atividade Fisica GPS</item>
        <item>Runtastic</item>
    </string-array>
</resources>
