<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFundo"
        tools:context=".LogActivity">

    <TextView
            android:text="Efetuar Cadastro"
            android:layout_width="328dp"
            android:layout_height="57dp"
            android:id="@+id/txCadastrolog"
            android:textSize="36sp" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" android:textAlignment="center" android:textColor="#09776D"
            android:gravity="center"/>

    <EditText
            android:layout_width="239dp"
            android:layout_height="37dp"
            android:inputType=""
            android:hint="@string/edEmail"
            android:background="@drawable/campohint"
            android:ems="10"
            android:id="@+id/edEmail" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/txCadastrolog" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textAlignment="center"
            android:textSize="14sp" android:textColor="#FF0D1C70"/>

    <EditText
            android:layout_width="235dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:hint="@string/edNome"
            android:ems="10"
            android:id="@+id/edNome"
            android:background="@drawable/campohint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
            android:textSize="14sp" android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/edEmail"/>

    <EditText
            android:layout_width="235dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:hint="@string/edSenha"
            android:ems="10"
            android:id="@+id/edSenha"
            android:background="@drawable/campohint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
            android:textSize="14sp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/edNome"/>

    <EditText
            android:layout_width="235dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:hint="@string/edConfSenha"
            android:ems="10"
            android:id="@+id/edConfSenha"
            android:background="@drawable/campohint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
            android:textSize="14sp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/edSenha"/>

    <Button
            android:text="Cadastrar"
            android:id="@+id/btnCadastrarMenu"
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:background="@drawable/campobotao"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/edConfSenha" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center" android:textStyle="bold" android:textSize="24sp"
            android:textColor="#FFFFFF"/>


</androidx.constraintlayout.widget.ConstraintLayout>