<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFundo"
        tools:context=".Login1Activity">

    <TextView
            android:layout_width="312dp"
            android:layout_height="65dp"
            android:id="@+id/txTiLog"
            android:textColor="#ffffff"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textSize="30sp"
            android:text="@string/txTiLog" android:background="@drawable/campotexto" android:textStyle="bold"
            android:gravity="center"/>


    <EditText
            android:layout_width="244dp"
            android:layout_height="49dp"
            android:inputType=""
            android:hint="@string/edEmail"
            android:background="@drawable/campohint"
            android:ems="10"
            android:id="@+id/edEmail" android:layout_marginTop="112dp"
            app:layout_constraintTop_toBottomOf="@+id/txTiLog" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
            android:textSize="14sp" app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
            android:layout_width="238dp"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:hint="@string/edConfSenha"
            android:ems="10"
            android:id="@+id/edConfSenha"
            android:background="@drawable/campohint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textAlignment="center" android:textColor="#FF0D1C70"
            android:textSize="14sp"
            android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/edEmail"
            app:layout_constraintHorizontal_bias="0.5"/>

    <Button
            android:text="Cadastrar"
            android:id="@+id/btnCadastrarLogin"
            android:layout_width="244dp"
            android:layout_height="49dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/campobotao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edConfSenha" android:layout_marginTop="60dp"
            android:textAlignment="center" android:textStyle="bold"
            android:textSize="24sp" android:gravity="center" app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>
