<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ApreActivity">

    <ImageButton
            android:layout_width="99dp"
            android:layout_height="88dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:srcCompat="@drawable/qrcode1"
            android:id="@+id/imbtnQrcode"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/btnCadastar"
            android:layout_width="191dp"
            android:layout_height="42dp"
            android:background="@drawable/campotexto"
            android:id="@+id/btnCadastar" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imbtnQrcode"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
            android:textSize="24sp" android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/btnLogin"
            android:layout_width="284dp"
            android:layout_height="47dp"
            android:id="@+id/btnLogin" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCadastar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/campotexto" android:textSize="24sp" android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_width="396dp"
            android:layout_height="381dp" tools:layout_editor_absoluteX="8dp"
            android:id="@+id/linearLayout" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:text="Bem Vindo a Plataforma 150ESaude!"
                android:background="@drawable/campotexto"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/txTitext01" android:textAlignment="center"
                android:textStyle="bold" android:textSize="30sp"/>
        <TextView
                android:padding="25dp"
                android:textColor="@color/colorCaixatexto"
                android:layout_width="384dp"
                android:layout_height="259dp" android:id="@+id/txTexPag" android:text="@string/txTexPag"
                android:textAlignment="center" android:textStyle="bold" android:textSize="18sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>