<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_principal"
        android:background="@color/colorFundo"
        android:id="@+id/FragmentContainer"
        tools:context=".PrincipalActivity">

    <TextView
            android:text="Começe agora suas atividade!"
            android:layout_width="362dp"
            android:layout_height="77dp"
            android:orientation="vertical"
            android:id="@+id/txacumulados" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:textAlignment="center" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30sp" app:layout_constraintHorizontal_bias="0.492" android:gravity="center"
            android:textColor="#07A293"/>
    <Spinner
            android:layout_width="312dp"
            android:layout_height="43dp"
            android:id="@+id/spinner_itens_ati"
            android:entries="@array/Spinner_items"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/campospinner" app:layout_constraintTop_toBottomOf="@+id/txacumulados"
            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.494" android:gravity="center"
            android:padding="10dp"/>
    <Button
            android:text="@string/btnInicioAtivi"
            android:layout_width="246dp"
            android:layout_height="42dp"
            android:background="@drawable/campoamarelo"
            android:id="@+id/btnInicioAtivi" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_itens_ati" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.5"
            android:textStyle="bold"/>
    <Button
            android:text="@string/btnFinalAtivi"
            android:layout_width="248dp"
            android:layout_height="47dp"
            android:background="@drawable/campovermelho"
            android:id="@+id/btnFinalAtivi" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/btnInicioAtivi" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" android:textColor="#FFFFFF"
            android:textStyle="bold" app:layout_constraintHorizontal_bias="0.509"/>
    <Button
            android:text="@string/btnCalendario"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:background="@drawable/campobotaoazul"
            android:id="@+id/btnCalendario1" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/btnFinalAtivi" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textAlignment="center" android:textColor="#FFFFFF"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="395dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="80dp" tools:layout_editor_absoluteX="8dp"
            android:id="@+id/lay2" android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCalendario1">


        <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigation"
                app:menu="@menu/button_nav_menuprincipal"
                android:background="@color/colorPrimary"
                app:itemIconTint="@android:color/white"
                app:itemTextColor="@android:color/white"
                android:layout_width="414dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Button" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>